# axum-myroutes

./: CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-push
.github/workflows/: ci.yml
axum-enumroutes/: Cargo.toml
axum-enumroutes-macros/: Cargo.toml
axum-enumroutes-macros/src/: enum.rs  generate.rs  lib.rs  method.rs  parse.rs  routes_attribute.rs  types.rs  variant.rs  variant_attribute.rs
axum-enumroutes/src/: lib.rs
axum-enumroutes/tests/: middleware-fallback.rs  middleware.rs  props_nostatic_default.rs  props_nostatic_nodefault.rs  props_static_default.rs  props_static_nodefault.rs  routes_extractors.rs  with_state.rs
axum-enumroutes/tests/ui/: fail_root_attr_invalid_key.rs  fail_root_attr_invalid_key.stderr  fail_root_attr_invalid_syntax.rs  fail_root_attr_invalid_syntax.stderr  fail_route_attr_empty_args.rs  fail_route_attr_invalid_args.rs  fail_route_attr_invalid_args.stderr  fail_route_attr_multi.rs  fail_route_attr_multi.stderr  fail_route_attr_no_args.rs  fail_route_attr_no_args.stderr  fail_route_attr_no_handler.rs  fail_route_attr_no_handler.stderr  fail_route_attr_no_path.rs  fail_route_attr_no_path.stderr  fail_route_attr_unknown_arg.rs  fail_route_attr_unknown_arg.stderr  fail_route_invalid_path.rs  fail_route_missing_attr.rs  fail_route_variant_with_data.rs  pass_all.rs  pass_conditional_compilation.rs
axum-myroutes/: Cargo.toml
axum-myroutes-macros/: Cargo.toml
axum-myroutes-macros/src/: enum.rs  generate.rs  method.rs  path.rs  routes_attribute.rs  variant_attribute.rs
axum-myroutes/src/: lib.rs
axum-myroutes/tests/: middleware.rs  props_nostatic_default.rs  props_nostatic_nodefault.rs  props_static_default.rs  props_static_nodefault.rs  routes_extractors.rs  ui.rs  with_state.rs
axum-myroutes/tests/ui/: fail_root_attr_invalid_key.rs  fail_root_attr_invalid_key.stderr  fail_root_attr_invalid_syntax.rs  fail_route_attr_empty_args.rs  fail_route_attr_empty_args.stderr  fail_route_attr_invalid_args.rs  fail_route_attr_multi.rs  fail_route_attr_multi.stderr  fail_route_attr_no_args.rs  fail_route_attr_no_args.stderr  fail_route_attr_no_handler.rs  fail_route_attr_no_handler.stderr  fail_route_attr_no_path.rs  fail_route_attr_no_path.stderr  fail_route_attr_unknown_arg.rs  fail_route_attr_unknown_arg.stderr  fail_route_invalid_path.rs  fail_route_invalid_path.stderr  fail_route_missing_attr.rs  fail_route_missing_attr.stderr  fail_route_variant_with_data.rs  fail_route_variant_with_data.stderr  pass_all.rs  pass_conditional_compilation.rs  pass_middleware.rs
