[workspace]
members = ["axum-enumroutes", "axum-enumroutes-macros"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Dmitry Marakasov <amdmi3@amdmi3.ru>"]
description = "Declare axum routes as enum, use to construct urls"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/AMDmi3/axum-enumroutes"
repository = "https://github.com/AMDmi3/axum-enumroutes"
documentation = "https://docs.rs/axum-enumroutes"
keywords = ["axum", "route", "routes", "extractor", "url_for"]

[workspace.dependencies]
axum-enumroutes-macros = { path = "axum-enumroutes-macros", version = "0.1.0" }
axum = { version = "0.8", default-features = false }
