[package]
name = "axum-enumroutes"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true

[features]
nightly = ["axum-enumroutes-macros/nightly"]

[dependencies]
axum = "0.8.8"
axum-enumroutes-macros.workspace = true
indexmap = "2.13.1"
thiserror = "2.0.18"
url-escape = "0.1.1"

[dev-dependencies]
anyhow = "1.0.102"
axum-test = "20.0.0"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
trybuild = "1.0.116"
