[package]
name = "axum-myroutes"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true

[features]
default = ["generic_param"]
nightly = ["axum-myroutes-macros/nightly"]
generic_param = []

[dependencies]
axum = { version = "0.8.9", default-features = false, features = ["query"] }
axum-myroutes-macros.workspace = true
indexmap = "2.14.0"
thiserror = "2.0.18"
url-escape = "0.1.1"

[dev-dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-test = "20.0.0"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
trybuild = "1.0.116"

[lints]
workspace = true
